--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node",
+    "client": "webpack --watch --config client/webpack.config.js",
     "build": "babel src -d dist",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,17 +16,29 @@
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.4.0",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2015-node": "^6.1.1",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-1": "^6.22.0",
+    "css-loader": "^0.26.4",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "nodemon": "^1.11.0"
+    "file-loader": "^0.10.1",
+    "node-sass": "^4.5.0",
+    "nodemon": "^1.11.0",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
     "body-parser": "^1.16.0",
+    "bootstrap": "^3.3.7",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "jsonwebtoken": "^7.2.1",
@@ -33,6 +46,15 @@
     "mongoose": "^4.8.1",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
-    "popup-tools": "^1.0.1"
+    "popup-tools": "^1.0.1",
+    "react": "^15.4.2",
+    "react-bootstrap": "^0.30.8",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
