--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "postinstall": "webpack --config client/webpack.config.js",
     "server": "nodemon server/src/index.js --exec babel-node",
     "client": "webpack --watch --config client/webpack.config.js",
-    "build": "babel src -d dist",
-    "start": "node dist/index.js",
+    "build": "cross-env NODE_ENV=production webpack --config client/webpack.config.js && babel server/src -d server/dist",
+    "start": "node server/dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -40,6 +40,7 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "bootstrap": "^3.3.7",
+    "cross-env": "^3.2.3",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "jsonwebtoken": "^7.2.1",
