--- a/.eslintrc
+++ b/.eslintrc
@@ -14,5 +14,6 @@
     "react/jsx-filename-extension": "off",
     "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
     "jsx-a11y/anchor-has-content": ["error"],
+    "linebreak-style": "off",
   }
 }
