--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "bootstrap": "^3.3.7",
     "cross-env": "^3.2.3",
     "dotenv": "^4.0.0",
+    "es6-promise": "^4.1.0",
     "express": "^4.14.1",
+    "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.2.1",
     "mongodb": "^2.2.22",
     "mongoose": "^4.8.1",
@@ -56,7 +58,6 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
-    "whatwg-fetch": "^2.0.3"
+    "redux-thunk": "^2.2.0"
   }
 }
