--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2015-node": "^6.1.1",
@@ -29,6 +30,7 @@
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
     "file-loader": "^0.10.1",
+    "jest": "^19.0.2",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "sass-loader": "^6.0.3",
