--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "bootstrap": "^3.3.7",
     "cross-env": "^3.2.3",
@@ -55,6 +56,7 @@
     "mongoose": "^4.8.1",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
+    "passport-local": "^1.0.0",
     "popup-tools": "^1.0.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
