--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
+    "nodemon": "^1.11.0",
+    "webpack-dev-server": "^2.4.1"
+  },
+  "dependencies": {
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
@@ -26,34 +35,20 @@
     "babel-preset-es2015-node": "^6.1.1",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-1": "^6.22.0",
-    "css-loader": "^0.26.4",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
-    "file-loader": "^0.10.1",
-    "jest": "^19.0.2",
-    "node-sass": "^4.5.0",
-    "nodemon": "^1.11.0",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.13.2",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
-  },
-  "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "bootstrap": "^3.3.7",
     "cross-env": "^3.2.3",
+    "css-loader": "^0.26.4",
     "dotenv": "^4.0.0",
     "es6-promise": "^4.1.0",
     "express": "^4.14.1",
+    "file-loader": "^0.10.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.2.1",
     "mongodb": "^2.2.22",
     "mongoose": "^4.8.1",
+    "node-sass": "^4.5.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
     "passport-local": "^1.0.0",
@@ -65,6 +60,10 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.1"
   }
 }
